# rollio-ng

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile.cross-jammy  Makefile  README.md  airbot.toml  analysis.md  bench.sh  build.sh  config.bak.toml  config.toml  dynamic-robot-payloads-mcap-plan.md  extract_episode_frame.py  lerobot_episode_frame_counts.py  lerobot_episode_timestamp_intervals.py  packaging.md  pyproject.toml
cameras/: CMakeLists.txt  README.md
cameras/camera_cora/: CMakeLists.txt
cameras/camera_cora/idl/: cora_h264_packet.idl
cameras/camera_cora/src/: channel_worker.cpp  cora_mapping.cpp  cora_mapping.hpp  cora_types.cpp  cora_types.hpp  device_descriptor.hpp  device_main.hpp  h264_annexb.cpp
cameras/camera_cora/tests/: runtime.cpp
cameras/pseudo/: CMakeLists.txt
cameras/pseudo/src/: main.cpp
cameras/pseudo/tests/: runtime.cpp
cameras/realsense/: CMakeLists.txt
cameras/realsense/src/: main.cpp
cameras/realsense/tests/: runtime.cpp
cameras/rollio-devices-coracam/: CMakeLists.txt  README.md
cameras/rollio-devices-coracam/apps/: coracam.cpp  coracam_head.cpp  coracam_lefthand.cpp  coracam_righthand.cpp
cameras/rollio-devices-coracam/idl/: cora_raw_image.idl
cameras/rollio-devices-coracam/src/: channel_worker.cpp  channel_worker.hpp  cora_mapping.hpp  cora_subscriber.cpp  cora_subscriber.hpp  device_descriptor.hpp  device_main.cpp  device_main.hpp  h264_annexb.cpp  h264_annexb.hpp
cameras/rollio-devices-coracam/tests/: runtime.cpp
cameras/v4l2/: Cargo.toml  README.md
cameras/v4l2/src/: main.rs
cameras/v4l2/tests/: cli.rs
controller/: Cargo.toml  README.md
controller/src/: cli.rs  collect.rs  dataset_resume.rs  device_query.rs  discovery.rs  episode.rs  lib.rs  main.rs  process.rs  runtime_paths.rs  runtime_plan.rs  setup.rs
controller/src/setup/: devices.rs  discovery.rs  dispatch.rs  mod.rs  overview.rs  pairings.rs  runtime.rs  save.rs  settings.rs  state.rs  subpanel.rs  tests.rs
controller/tests/: collect_smoke.rs  setup_cli.rs
cpp/: CMakeLists.txt
cpp/common/include/rollio/: device_config.hpp  topic_names.hpp  types.h
cpp/pseudo-camera/: CMakeLists.txt
cpp/pseudo-camera/src/: main.cpp
devices/umi/: CMakeLists.txt  README.md
devices/umi/src/: bridge.cpp  bridge.hpp  config.cpp  config.hpp  main.cpp
devices/umi/tests/: runtime.cpp
encoder/: Cargo.toml  README.md
encoder-x5/: Cargo.toml  build.rs
encoder-x5/src/: backend.rs  ffi.c  main.rs
encoder/examples/: cuvid_low_delay.rs  nvenc_repro.rs
encoder/src/: annexb.rs  codec.rs  lib.rs  media.rs  passthrough.rs  preview.rs  preview_runtime.rs  probe.rs  recording_runtime.rs  runtime.rs  sink.rs
encoder/src/backend/: bsf.rs  filter_graph.rs  mod.rs
encoder/src/backend/color/: libav_cpu.rs  libav_nvidia.rs  libav_vaapi.rs  mod.rs  passthrough.rs
encoder/src/backend/depth/: mod.rs  rvl.rs
encoder/tests/: runtime.rs
episode-assembler/: Cargo.toml
episode-assembler/src/: dataset.rs  lerobot.rs  lib.rs  main.rs  raw.rs  runtime.rs
episode-assembler/tests/: loss_point_a.rs
episode-lerobot/: Cargo.toml  README.md
episode-lerobot/src/: dataset.rs  lerobot.rs  lib.rs  main.rs  packets.rs  raw.rs  runtime.rs
episode-lerobot/src/muxer/: ffmpeg_video.rs  mod.rs  rvl_frame.rs
episode-lerobot/tests/: loss_point_a.rs
episode-mcap/: Cargo.toml
episode-mcap/schemas/: FrameTransform.bfbs  Imu.bfbs  RawImage.bfbs
episode-mcap/src/: encode.rs  lib.rs  main.rs  mcap_writer.rs  runtime.rs
episode-mcap/src/fb/: fbs_discover.rs  fbs_foxglove.rs  mod.rs
episode-mcap/tests/: mcap_roundtrip.rs
robots/airbot_eef/: Cargo.toml
robots/airbot_eef/src/: lib.rs  runtime.rs
robots/airbot_play/: pyproject.toml
robots/airbot_play/src/rollio_airbot_play/: __init__.py  backend.py  can_transport.py  cli.py  config.py  gravity.py  ipc.py  messages.py  pinocchio_model.py  runtime.py
robots/airbot_play/src/rollio_airbot_play.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
robots/airbot_play/tests/: test_runtime.py
robots/airbot_play_rust/: Cargo.toml  README.md
robots/airbot_play_rust/scripts/: airbot_mode_keyboard.py
robots/airbot_play_rust/src/: lib.rs  main.rs  rollio_runtime.rs
robots/nero/: README.md  pyproject.toml
robots/nero/scripts/: nero_mode_keyboard.py
robots/nero/src/rollio_device_nero/: __init__.py  airbot_aligned_pose.py  cli.py  config.py  ik.py  (+3 more)
robots/nero/tests/: test_airbot_aligned_pose.py  test_config.py  test_gravity.py  test_ik.py  test_ipc_types.py  test_rate_monitor.py  test_runtime_modes.py
robots/pseudo/: Cargo.toml  README.md
robots/pseudo/src/: lib.rs  main.rs
robots/pseudo/tests/: runtime.rs
rollio-types/: Cargo.toml  README.md
rollio-types/src/: config.rs  lib.rs  messages.rs  schema.rs
rollio-types/tests/: config.rs  messages.rs  schema_cli.rs
sensors/imu_cora/: Cargo.toml  README.md  build.rs
sensors/imu_cora/cpp/: CMakeLists.txt
sensors/imu_cora/src/: config.rs  cora.rs  descriptor.rs  main.rs  probe.rs  query.rs  run.rs  validate.rs
storage/: Cargo.toml
storage/dataloop/: Cargo.toml  build.rs
storage/dataloop/examples/: smoke.rs
storage/dataloop/src/: ffi.rs  lib.rs  main.rs  runtime.rs
storage/local/: Cargo.toml  README.md
storage/local-lerobot/: Cargo.toml  README.md
storage/local-lerobot/src/: lib.rs  main.rs  runtime.rs
storage/local/src/: lib.rs  runtime.rs
storage/src/: lib.rs  main.rs  runtime.rs
teleop-router/: Cargo.toml  README.md
teleop-router/src/: lib.rs  main.rs
teleop-router/tests/: runtime.rs
test/bus-tap/: Cargo.toml  README.md
test/bus-tap/src/: main.rs
test/robot-keyboard/: Cargo.toml
test/robot-keyboard/src/: args.rs  bus.rs  controls.rs  lib.rs  main.rs  render.rs  state.rs
test/robot-keyboard/tests/: runtime.rs
ui-server/: Cargo.toml
ui-server/src/: main.rs
visualizer/: Cargo.toml  README.md
visualizer/src/: ipc.rs  jpeg.rs  main.rs  preview_config.rs  preview_pipeline.rs  protocol.rs  stream_info.rs  websocket.rs
(+296 files in other folders)
