[workspace]
resolver = "2"
members = [
    "rollio-bus",
    "rollio-types",
    "controller",
    "visualizer",
    "teleop-router",
    "encoder",
    "episode-assembler",
    "storage",
    "monitor",
    "robots/pseudo",
    "robots/airbot_play_rust",
    "test/test-publisher",
    "cameras/v4l2",
    "test/bus-tap",
    "ui-server",
    "control-server",
]
exclude = ["third_party"]
