cmake_minimum_required(VERSION 3.22)
project(rollio-cameras LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(ROLLIO_BUILD_CPP_TESTS "Build Rollio C++ test executables" ON)

set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(BUILD_CXX ON CACHE BOOL "" FORCE)
set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
add_subdirectory("../third_party/iceoryx2" "${CMAKE_BINARY_DIR}/third_party/iceoryx2" EXCLUDE_FROM_ALL)

# Build librealsense2 in-tree as a static library so rollio-device-realsense
# bundles the realsense SDK and has no librealsense2.so runtime dependency.
# Operators need only libusb-1.0-0 / libudev1 from Ubuntu apt, both of which
# dpkg-shlibdeps can resolve normally (Intel's librealsense2 .so is *not* a
# Debian package). Reset BUILD_SHARED_LIBS to OFF so the realsense2 target's
# `add_library(... )` becomes STATIC (it has no explicit STATIC/SHARED kind);
# also disable every realsense bundled feature that isn't reachable from the
# `realsense2` target itself (graphical examples, GLSL/GL extensions, tools,
# Python bindings, FastDDS, libcurl-based update checks, embedded firmware
# downloads). See third_party/librealsense/CMake/lrs_options.cmake for the
# full option list. CACHE FORCE matches the iceoryx2 setup above so reruns
# of `make cpp-build` stay deterministic regardless of any leftover cache.
set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(BUILD_GRAPHICAL_EXAMPLES OFF CACHE BOOL "" FORCE)
set(BUILD_GLSL_EXTENSIONS OFF CACHE BOOL "" FORCE)
set(BUILD_TOOLS OFF CACHE BOOL "" FORCE)
set(BUILD_UNIT_TESTS OFF CACHE BOOL "" FORCE)
set(BUILD_PYTHON_BINDINGS OFF CACHE BOOL "" FORCE)
set(BUILD_WITH_DDS OFF CACHE BOOL "" FORCE)
set(BUILD_RS2_ALL OFF CACHE BOOL "" FORCE)
set(CHECK_FOR_UPDATES OFF CACHE BOOL "" FORCE)
set(IMPORT_DEPTH_CAM_FW OFF CACHE BOOL "" FORCE)
set(ENABLE_CCACHE OFF CACHE BOOL "" FORCE)
# librealsense's CMake/unix_config.cmake unconditionally appends `-Werror`,
# `-pedantic`, `-Wno-deprecated-builtins`, etc. to CMAKE_CXX_FLAGS via plain
# `set()` (no PARENT_SCOPE), so the flags leak into every subdir added
# afterwards.  Save the pre-realsense flags so we can restore a clean baseline
# before adding Fast-DDS / foonathan_memory — those projects do not compile
# cleanly with `-Werror -Wpedantic` on clang ≥ 21.
set(_rollio_cxx_flags_before_realsense "${CMAKE_CXX_FLAGS}")
set(_rollio_c_flags_before_realsense   "${CMAKE_C_FLAGS}")
add_subdirectory(
    "../third_party/librealsense"
    "${CMAKE_BINARY_DIR}/third_party/librealsense"
    EXCLUDE_FROM_ALL
)
# Restore the baseline.  The realsense static lib was already configured with
# the polluted flags above; only subsequent subdirs see the restored flags.
set(CMAKE_CXX_FLAGS "${_rollio_cxx_flags_before_realsense}")
set(CMAKE_C_FLAGS   "${_rollio_c_flags_before_realsense}")

if(ROLLIO_BUILD_CPP_TESTS)
    enable_testing()
endif()

add_library(rollio-common INTERFACE)
target_include_directories(
    rollio-common
    INTERFACE
    "${CMAKE_CURRENT_SOURCE_DIR}/../cpp/common/include"
)
target_link_libraries(rollio-common INTERFACE iceoryx2-cxx::static-lib-cxx)

add_subdirectory(realsense)

# ── Coracam (Cora / Fast-DDS H.264 Annex-B + raw camera bridge) ──────────
#
# Dependencies vendored under third_party/:
#   third_party/Fast-DDS   — eProsima Fast-DDS 3.x (includes fastcdr)
#   third_party/memory     — foonathan/memory (required by Fast-DDS)
#
# Fast-CDR ships inside third_party/Fast-DDS/thirdparty/fastcdr and is built
# via Fast-DDS' own THIRDPARTY_fastcdr=FORCE knob; no separate top-level
# third_party/Fast-CDR is needed.
#
# See signal_other/analysis/rollio-device/coracam-h264-annexb实施方案.zh.md
option(ROLLIO_BUILD_CORACAM "Build Cora/FastDDS Coracam bridge devices" OFF)
if(ROLLIO_BUILD_CORACAM)
    # -----------------------------------------------------------------------
    # 1. foonathan/memory
    # Build from source and create a shim config file so Fast-DDS's
    # find_package(foonathan_memory REQUIRED) can locate the target without
    # a system install.
    # -----------------------------------------------------------------------
    set(FOONATHAN_MEMORY_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
    set(FOONATHAN_MEMORY_BUILD_TESTS    OFF CACHE BOOL "" FORCE)
    set(FOONATHAN_MEMORY_BUILD_TOOLS    OFF CACHE BOOL "" FORCE)
    add_subdirectory(
        "${CMAKE_CURRENT_SOURCE_DIR}/../third_party/memory"
        "${CMAKE_BINARY_DIR}/third_party/memory"
        EXCLUDE_FROM_ALL
    )
    # Write a build-tree shim so find_package(foonathan_memory) succeeds.
    file(WRITE "${CMAKE_BINARY_DIR}/foonathan_memory-config.cmake"
        "# Build-tree shim generated by cameras/CMakeLists.txt.\n"
        "# foonathan_memory is built as part of this CMake project.\n"
        "if(NOT TARGET foonathan_memory)\n"
        "  message(FATAL_ERROR \"foonathan_memory target not in scope\")\n"
        "endif()\n"
        "set(foonathan_memory_FOUND TRUE)\n"
    )
    set(foonathan_memory_DIR "${CMAKE_BINARY_DIR}" CACHE PATH
        "Build-tree foonathan_memory config dir" FORCE)

    # -----------------------------------------------------------------------
    # 2. Fast-DDS
    # Force bundled thirdparties (fastcdr, Asio, TinyXML2) to avoid conflicts
    # with any system-installed versions.  Disable everything not needed so
    # only the core DDS library is built.
    # -----------------------------------------------------------------------
    set(THIRDPARTY_fastcdr  "FORCE" CACHE STRING "" FORCE)
    set(THIRDPARTY_Asio     "FORCE" CACHE STRING "" FORCE)
    set(THIRDPARTY_TinyXML2 "FORCE" CACHE STRING "" FORCE)
    set(THIRDPARTY_UPDATE   OFF     CACHE BOOL   "" FORCE)
    set(SECURITY            OFF  CACHE BOOL "" FORCE)
    set(NO_TLS              ON   CACHE BOOL "" FORCE)
    set(SQLITE3_SUPPORT     OFF  CACHE BOOL "" FORCE)
    set(FASTDDS_STATISTICS  OFF  CACHE BOOL "" FORCE)
    set(COMPILE_EXAMPLES    OFF  CACHE BOOL "" FORCE)
    set(COMPILE_TOOLS       OFF  CACHE BOOL "" FORCE)
    set(BUILD_DOCUMENTATION OFF  CACHE BOOL "" FORCE)
    set(CHECK_DOCUMENTATION OFF  CACHE BOOL "" FORCE)
    set(INSTALL_EXAMPLES    OFF  CACHE BOOL "" FORCE)
    set(INSTALL_TOOLS       OFF  CACHE BOOL "" FORCE)
    set(LOG_NO_INFO         ON   CACHE BOOL "" FORCE)
    # foonathan/memory headers use a C++14 extension (void cast in constexpr)
    # that clang flags with -Wc++14-extensions under -Wpedantic.  Fast-DDS
    # itself enables -Wall -Wpedantic; combined with any -Werror that may leak
    # from other subdirs this causes build failures.  Suppress via Fast-DDS'
    # own escape hatch; -Wno-error prevents other warnings from escalating.
    set(EPROSIMA_EXTRA_CMAKE_CXX_FLAGS
        "-Wno-c++14-extensions -Wno-error" CACHE STRING "" FORCE)
    # Cross-compile fix: Fast-DDS/src/cpp/CMakeLists.txt contains a try_run
    # that detects the platform shared_mutex priority at configure time.
    # try_run cannot execute target binaries on a cross-compiling host; CMake
    # requires the result to be pre-seeded in cache.  A non-zero SM_RUN_RESULT
    # means the shared_mutex probe did not return PTHREAD_RWLOCK_PREFER_READER_NP,
    # so Fast-DDS falls back to its bundled thirdparty shared_mutex (safe on all
    # platforms including aarch64).  The compile-side result (SM_COMPILE_RESULT)
    # must also be set so the outer `if(SM_COMPILE_RESULT AND NOT SM_RUN_RESULT)`
    # guard evaluates deterministically.
    if(CMAKE_CROSSCOMPILING)
        set(SM_RUN_RESULT 1 CACHE STRING
            "Cross-compile pre-seed: non-zero selects bundled thirdparty shared_mutex" FORCE)
        set(SM_COMPILE_RESULT TRUE CACHE BOOL
            "Cross-compile pre-seed: assume shared_mutex probe compiled" FORCE)
    endif()
    add_subdirectory(
        "${CMAKE_CURRENT_SOURCE_DIR}/../third_party/Fast-DDS"
        "${CMAKE_BINARY_DIR}/third_party/Fast-DDS"
        EXCLUDE_FROM_ALL
    )

    add_subdirectory(rollio-devices-coracam)
endif()
