[package]
name = "rollio-encoder"
version = "1.0.0"
edition = "2021"

[dependencies]
rollio-types = { path = "../rollio-types" }
iceoryx2 = { path = "../third_party/iceoryx2/iceoryx2" }
rollio-bus = { version = "1.0.0", path = "../rollio-bus" }
rvl = { version = "1.0.0", path = "../third_party/rvl-rust" }
clap = { version = "4.6.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
ffmpeg-next = { version = "8.1.0", default-features = false, features = ["codec", "format", "software-scaling"] }

[dev-dependencies]
tempfile = "3.27.0"
# Direct ffmpeg access in integration tests for building synthetic
# JPEG payloads (mjpeg round-trip test). The lib already depends on
# this; the dev-dep declaration just makes it visible to the test
# crate's separate compilation unit.
ffmpeg-next = { version = "8.1.0", default-features = false, features = ["codec", "format", "software-scaling"] }
