[package]
name = "rollio-encoder"
version = "1.0.0"
edition = "2021"

[dependencies]
rollio-types = { path = "../rollio-types" }
iceoryx2 = { path = "../third_party/iceoryx2/iceoryx2" }
rollio-bus = { version = "1.0.0", path = "../rollio-bus" }
rvl = { version = "1.0.0", path = "../third_party/rvl-rust" }
clap = { version = "4.6.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
ffmpeg-next = { version = "8.1.0", default-features = false, features = ["codec", "format", "software-scaling", "filter"] }
# Used by the preview-role encoder when output_mode = jpeg: PreviewBuilder
# decodes/copies the camera frame to RGB24, JpegCompressor compresses to
# JPEG via libjpeg-turbo, and the result is published on .../preview-jpeg.
turbojpeg = "1"
fast_image_resize = "5"
log = "0.4"
# `ffmpeg-sys-next` is already pulled in transitively by `ffmpeg-next`,
# but listing it here lets the `static-ffmpeg` feature below toggle the
# sys-crate's `build-*` features (which don't have passthroughs in
# `ffmpeg-next`'s own feature table).
ffmpeg-sys-next = { version = "8.1.0", default-features = false }

[features]
default = []
# Bundle FFmpeg + libx264/libx265/libsvtav1 statically into the binary,
# instead of dynamically linking the host's libavcodec/libavformat. The
# bundled FFmpeg is built against the NVENC SDK 12.1+ headers shipped by
# `nv-codec-headers` (Ubuntu's `libffmpeg-nvenc-dev`), so `hevc_nvenc`
# advertises 4:2:2 input formats (`NV16`/`P210LE`) on Ada/Blackwell
# GPUs — the host's distro FFmpeg 6.x does not. Build deps required
# (Ubuntu): `libffmpeg-nvenc-dev`, `libx264-dev`, `libsvtav1-dev`,
# `libx265-dev`, `nasm`, plus a CUDA toolkit at `/usr/local/cuda`
# (overridable via `CUDA_PATH`). First build is ~5–10 min; subsequent
# rebuilds reuse the compiled artifacts under `target/.../build/`.
# Enables GPL because libx264/libx265 are GPL.
static-ffmpeg = [
    "ffmpeg-next/build",
    "ffmpeg-next/build-license-gpl",
    "ffmpeg-sys-next/build-nvidia",
    "ffmpeg-sys-next/build-vaapi",
    "ffmpeg-sys-next/build-lib-x264",
    "ffmpeg-sys-next/build-lib-x265",
    "ffmpeg-sys-next/build-pic",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("ffmpeg_5_0", "ffmpeg_5_1", "ffmpeg_6_0", "ffmpeg_7_0", "ffmpeg_8_0"))'] }

[dev-dependencies]
tempfile = "3.27.0"
# Direct ffmpeg access in integration tests for building synthetic
# JPEG payloads (mjpeg round-trip test). The lib already depends on
# this; the dev-dep declaration just makes it visible to the test
# crate's separate compilation unit.
ffmpeg-next = { version = "8.1.0", default-features = false, features = ["codec", "format", "software-scaling", "filter"] }
