[package]
name = "rollio-episode-mcap"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rollio-episode-mcap"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
rollio-types = { path = "../rollio-types" }
rollio-bus = { path = "../rollio-bus" }
iceoryx2 = { path = "../third_party/iceoryx2/iceoryx2" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", features = ["parse", "display"] }
log = "0.4"
env_logger = "0.11"
flatbuffers = "25.12.19"
mcap = "0.24"

[dev-dependencies]
tempfile = "3"
