[package]
name = "rollio-types"
version = "1.0.0"
edition = "2021"

[dependencies]
rollio-bus = { path = "../rollio-bus" }
iceoryx2 = { path = "../third_party/iceoryx2/iceoryx2" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["parse", "display"] }
thiserror = "2"
