[package]
name = "rollio-teleop-router"
version = "0.1.0"
edition = "2021"

[dependencies]
rollio-bus = { path = "../rollio-bus" }
rollio-types = { path = "../rollio-types" }
iceoryx2 = { path = "../third_party/iceoryx2/iceoryx2" }
clap = { version = "4", features = ["derive"] }
toml = { version = "0.8", features = ["display"] }
thiserror = "2"
