[package]
name = "rollio-ui-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.31"
rollio-types = { version = "0.1.0", path = "../rollio-types" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6.8", features = ["fs"] }
