[package]
name = "rollio-device-v4l2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
iceoryx2 = { version = "0.8.1", path = "../../third_party/iceoryx2/iceoryx2" }
jpeg-decoder = "0.3.2"
rollio-bus = { version = "0.1.0", path = "../../rollio-bus" }
rollio-types = { version = "0.1.0", path = "../../rollio-types" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
v4l = "0.14.0"
